...
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chat_toolbar"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/chat_msg"
                    android:layout_width="301dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="9"
                    android:backgroundTint="@color/white"
                    android:hint="Type message.."
...
                    app:layout_constraintBottom_toTopOf="@+id/chat_msg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/chat_btn"
                    android:layout_width="66dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/ic_send_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
...
