...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/logout"
                android:layout_width="379dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="logout"
                android:text="Logout"
                android:textColor="@color/Aqua"
                app:backgroundTint="@color/green_darkest"
                app:layout_constraintBottom_toTopOf="@id/update_login_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SplitLine_hor_about_logout"
...
